# eng-dados-projeto-2

./: 404.html  README.md  docker-compose.yml  index.html  init.sql  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
arquitetura/: index.html
docs/: arquitetura.md  index.md  modelo-dados.md  setup.md
docs/notebooks/: 01-extracao.md  02-delta-lake.md  03-dml.md
modelo-dados/: index.html
notebooks/: 01_postgres_to_minio_csv.ipynb  02_csv_to_delta.ipynb  03_dml_delta.ipynb
notebooks/01-extracao/: index.html
notebooks/02-delta-lake/: index.html
notebooks/03-dml/: index.html
search/: search_index.json
setup/: index.html
