[project]
name = "projeto-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.3",
    "botocore>=1.43.3",
    "delta-spark==3.2.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.10",
    "pyspark==3.5.3",
]
